# Dynamic-median

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  StartUp.cpp
src/data_structures/headers/: DynamicMedian.hpp  MinMaxHeap.hpp
src/data_structures/implementation/: DynamicMedian.cpp  MinMaxHeap.cpp
test/: CMakeLists.txt  DoubleEquality.cpp  DoubleEquality.hpp  TestDynamicMedian.cpp  TestMinMaxHeap.cpp
